lang.java.statics.test/tests/positive/classes/nested/qualifiedtypequalifiedthis.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {
        public class B {
            public void m() {
                 A a = p.A.this;
            }
        }
    }

}
