lang.java.statics.test/tests/negative/classes/nested/qualifiedtypequalifiedthis.no.javtest
STATIX fail java\.subtype\.sub-type
JAVAC  fail A\.B cannot be converted to A

[p] {

    [A]
    package p;
    public class A {
        public class B {
            public void m() {
                 A a = p.A.B.this;
            }
        }
    }

}
